version/0.17/_sources/api/solver/_autosummary/settings/vector_1.rst.txt
:orphan:

.. _vector_1:

vector
======

.. autoclass:: ansys.fluent.core.solver.settings_232.vector_1.vector
    :show-inheritance:

.. rubric:: Methods

========================================   =============================================

Method                                                                           Summary

========================================   =============================================
:ref:`list <list>`                                                       'list' command.

:ref:`list_properties <list_properties>`                      'list_properties' command.

:ref:`duplicate <duplicate>`                                        'duplicate' command.

:ref:`display <display_2>`                                      Display graphics object.

:ref:`copy <copy_4>`                                               Copy graphics object.

:ref:`add_to_graphics <add_to_graphics>`       Add graphics object to existing graphics.

:ref:`clear_history <clear_history>`                               Clear object history.

========================================   =============================================

.. rubric:: Named object type

:ref:`vector_child <vector_child>`


.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`graphics <graphics>`       'graphics' child.

==========================   =====================

