version/0.19/_sources/api/solver/_autosummary/settings/vector_1.rst.txt
:orphan:

.. _vector_1:

vector
======

.. autoclass:: ansys.fluent.core.solver.settings_241.vector_1.vector
    :show-inheritance:

.. rubric:: Methods

==========================================   =============================================

Method                                                                             Summary

==========================================   =============================================
:ref:`delete <delete_1>`                                          Delete selected objects.

:ref:`list <list>`                                          List the names of the objects.

:ref:`list_properties <list_properties_1>`           List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                              Create a copy of the object.

:ref:`display <display_2>`                                        Display graphics object.

:ref:`copy <copy_4>`                                                 Copy graphics object.

:ref:`add_to_graphics <add_to_graphics>`         Add graphics object to existing graphics.

:ref:`clear_history <clear_history>`                                 Clear object history.

==========================================   =============================================

.. rubric:: Named object type

:ref:`vector_child <vector_child>`


.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`graphics <graphics>`       'graphics' child.

==========================   =====================

